syntax = "proto3";

package michilu.boilerplate.pb;

option go_package = "pb";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// Event is Entity.
message Event {
  bytes id = 1 [
    (validate.rules).bytes = {
      min_len: 1
    }
  ];
  // origin is an identity of the operator who entered the event.
  string origin = 2 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
  repeated EventTimePoint time_point = 3 [
    (validate.rules).repeated = {
      min_items: 1
    }
  ];
}

// EventTimePoint is Entity.
message EventTimePoint {
  google.protobuf.Timestamp timestamp = 1;
  string tag = 2 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
}
